--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -3,13 +3,14 @@
 }
 .layoutContainer-video{
     position: absolute;
-    top: 0;
     left: 0;
     bottom: 0;
     top: 0;
+    right: 0;
     width: 100%;
-    height: 100vh;
-    background-color: rgba(246, 247, 254, 0.6);
+    height: 100%;
+    background-color: rgba(246, 247, 254, 0.5);
+    z-index: -1; /* propiedad que debo quitar*/
   }
   .layoutContainer-video video{
     position: fixed;
@@ -17,7 +18,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 100vh;
+    height:100%;
     z-index: -1; 
     object-fit: cover;
   }
