--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -4,4 +4,26 @@
     grid-gap: 30px;
     padding: 40px;
     justify-items: center;
+    position: relative;
+}
+.allPokemon{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.allPokemon button{
+    width: 150px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border: 2px solid #000;
+    &:hover{
+        transform: scale(1.1);
+        background-color: burlywood;
+        cursor: pointer;
+        font-weight: bolder;
+        border: 2px solid red;
+    }
 }
