--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,14 +1,13 @@
 .cardContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 250px;
-    height: 350px;
+    width: 280px;
+    height: 400px;
     border: 2px #000 solid;
     border-radius: 0px 20px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    padding: 15px 20px;
     background-color: rgba(220, 48, 29, 0.6);
     gap: 10px;
     position: relative;
@@ -39,7 +38,7 @@
     z-index: 1;
 }
 .cardContainer figure{
-    width: 70%;
+    width: 80%;
     height: 60%;
 }
 .cardContainer figure img{
@@ -52,29 +51,49 @@
 .cardContainer-info{
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items:flex-start;
     width: 100%;
+    gap: 5px;
 }
-.cardContainer-info p:first-child{
+.cardContainer-info__name{
+    margin: 0 auto;
     font-size: 18px;
-    position: absolute;
-    top: 20px;
-    right: 10px;
     background-color: yellow;
     border: 2px solid #000;
     border-radius: 5px;
-    padding: 5px;
-    &:hover{
-        transform: scale(1.1);
-    }
+    padding: 3px;
 }
-.cardContainer-info p:last-child{
-    font-size: 15px;
-    position: absolute;
-    left: 15px;
-    bottom: 15px;
-    background-color: aliceblue;
+
+.cardContainer-info__types{
+    display: flex;
+    gap: 10px;
+    margin-left: 5px;
+}
+.cardContainer-info__types p{
     border: 2px solid #000;
     border-radius: 5px;
-    padding: 5px;
+    width: 70px;
+    text-align: center;
+    background-color: chartreuse;
+    
 }
+.cardContainer-info button{
+    margin: 0 auto;
+    background-color: transparent;
+    margin-top: 5px;
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bolder;
+    &:hover{
+        background-color: yellow;
+        cursor: pointer;
+    }
+}
+.Link{
+    text-decoration: none;
+    /* border-bottom: none; */
+}
+
+
