feature: advances in css and validation of the form started

--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,6 +1,6 @@
 .searchContainer{
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     gap: 0.5rem;
     padding-right: 10px;
 }
@@ -8,6 +8,15 @@
     border: 2px rgba(244, 6, 6) solid;
     border-radius: 5px;
     text-align: center;
-    /* width: 18rem; */
-    /* height: 2rem; */
+    width: 16rem;
+    height: 2rem;
+}
+.searchContainer button{
+    width: 4rem;
+    border-radius: 5px;
+    font-weight: bolder;
+    &:hover{
+        background-color: yellow;
+        cursor: pointer;
+    }
 }
