--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 110px;
+    height: 60px;
     background: rgb(232,59,24);
     background: linear-gradient(90deg, rgba(232,59,24,0.9808298319327731) 34%, rgba(228,236,237,1) 68%);
     padding: 1rem;
@@ -15,12 +15,12 @@
     width: 100px;
 }
 .navContainer figure img{
-    width: 100%;
+    width: 50%;
     height: auto;
     border-radius: 20px;
     background-color: transparent;
-    mix-blend-mode:multiply;
-    animation: rotate 4s infinite linear;
+    mix-blend-mode: multiply;
+    animation: rotate 8s infinite linear;
 }
 
 @keyframes rotate{
@@ -39,4 +39,13 @@
 .navContainer-routes li{
     list-style: none;
     font-size: 1rem;
+}
+.navContainer-routes__pathActive{
+    text-decoration: none;
+    color: mediumblue;
+}
+.navContainer-routes__pathDisable{
+    text-decoration: none;
+    color: #000;
+    
 }
