--- a/client/src/pages/CreatePokemonForm/CreatePokemonForm.module.css
+++ b/client/src/pages/CreatePokemonForm/CreatePokemonForm.module.css
@@ -1,3 +1,11 @@
+.generalFormContainer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
 .formContainer{
     display: flex;
     flex-direction: column;
@@ -7,6 +15,8 @@
     border: 2px solid #000;
     padding: 10px;
     margin-bottom: 20px;
+    background-color: rgba(214, 224, 11, 0.56);
+    gap: 5px;
 }
 .formContainer-types{
     display: grid;
