--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -7,6 +7,7 @@
     position: relative;
 }
 .allPokemon{
+    position: relative;
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
