--- a/client/src/pages/CreatePokemonForm/CreatePokemonForm.module.css
+++ b/client/src/pages/CreatePokemonForm/CreatePokemonForm.module.css
@@ -6,9 +6,11 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    background-color: aliceblue;
+    background-color: rgba(37, 252, 13, 0.5);
+    border-radius: 10px;
     margin: 0 auto;
     margin-bottom: 30px;
+    box-shadow: -4px 13px 95px 30px rgba(0,0,0,0.75);
 }
 .generalFormContainer h1{
     text-transform: uppercase;
@@ -20,6 +22,7 @@
     width: 500px;
     height: 100%;
     margin: 0 auto;
+    border-radius: 5px;
     border: 2px solid #000;
     padding: 10px;
     margin-bottom: 20px;
@@ -32,7 +35,24 @@
     gap: 5px;
 }
 .formContainer button{
-    width: 50%;
+    width: 30%;
+    height: 2rem;
     margin: 0 auto;
     margin-top: 15px;
+    border-radius: 5px;
+    &:hover{
+        cursor: pointer;
+        background-color: rgba(207, 48, 48, 0.5);
+        font-weight: bolder;
+    }
+}
+.formContainer-validationMessage{
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
+}
+.formContainer-typeMessage{
+   display: flex;
+   justify-content: center;
+   margin: 15px;
 }
